--- a/3-technical-documentation/index.html
+++ b/3-technical-documentation/index.html
@@ -10,7 +10,7 @@
     <!-- nav -->
     <nav id="navbar">
       <!-- header -->
-      <header>HTML Beginner's Tutorial</header>
+      <header id="navbar-header">HTML Beginner's Tutorial</header>
 
       <!-- inner-links -->
       <ul>
@@ -34,7 +34,7 @@
     </nav>
 
     <!-- main -->
-    <main class="main-doc">
+    <main id="main-doc">
       <!-- intro-section -->
       <section class="main-section" id="intro">
         <!-- intro header -->
@@ -63,9 +63,7 @@
     &lt;body&gt;
         &lt;h1&gt;Hello World&lt;/h1&gt;
     &lt;/body&gt;
-&lt;/html&gt;
-            </code>
-        </pre>
+&lt;/html&gt;</code></pre>
       </section>
 
       <section class="main-section" id="elements">
@@ -76,8 +74,8 @@
             <span>declares the document type</span>
           </li>
           <li>
-            <code class="code-il"> &lt;html&gt; </code>
-            <p>is the root element</p>
+            <code class="code-il"> &lt;html&gt;</code>
+            <span>is the root element</span>
           </li>
           <li>
             <code class="code-il"> &lt;head&gt; </code>
