--- a/3-technical-documentation/index.html
+++ b/3-technical-documentation/index.html
@@ -15,20 +15,20 @@
       <!-- inner-links -->
       <ul>
         <!-- intro link -->
-        <li class="nav-link">
-          <a href="#intro">intro</a>
+        <li>
+          <a class="nav-link" href="#intro">intro</a>
         </li>
-        <li class="nav-link">
-          <a href="#example">example</a>
+        <li>
+          <a class="nav-link" href="#example">example</a>
         </li>
-        <li class="nav-link">
-          <a href="#elements">elements</a>
+        <li>
+          <a class="nav-link" href="#elements">elements</a>
         </li>
-        <li class="nav-link">
-          <a href="#browsers">browsers</a>
+        <li>
+          <a class="nav-link" href="#browsers">browsers</a>
         </li>
-        <li class="nav-link">
-          <a href="#history">history</a>
+        <li>
+          <a class="nav-link" href="#history">history</a>
         </li>
       </ul>
     </nav>
@@ -106,7 +106,7 @@
         <header class="section-header">history</header>
         <ul id="history">
           <li>
-            <span class="event">1989 - Birth of HTML</span>
+            <p class="event">1989 - Birth of HTML</p>
             <p>
               Tim Berners-Lee introduced the first version of HTML (Hypertext
               Markup Language) as a means to share and structure information on
@@ -114,7 +114,7 @@
             </p>
           </li>
           <li>
-            <span class="event">1995 - HTML2 Specification</span>
+            <p class="event">1995 - HTML2 Specification</p>
             <p>
               The HTML2 specification was published as a formal standard,
               introducing features like tables and image embedding, expanding
@@ -122,7 +122,7 @@
             </p>
           </li>
           <li>
-            <span class="event">1997 - HTML4 Specification</span>
+            <p class="event">1997 - HTML4 Specification</p>
             <p>
               The HTML4 specification was released, bringing significant
               advancements such as support for frames, form validation, and
@@ -130,7 +130,7 @@
             </p>
           </li>
           <li>
-            <span class="event">2000 - XHTML Introduction</span>
+            <p class="event">2000 - XHTML Introduction</p>
             <p>
               XHTML (Extensible Hypertext Markup Language) was introduced as a
               reformulation of HTML in XML syntax, promoting stricter adherence
@@ -139,7 +139,7 @@
             </p>
           </li>
           <li>
-            <span class="event">2014 - HTML5 Standardization</span>
+            <p class="event">2014 - HTML5 Standardization</p>
             <p>
               HTML5 became an official standard by the W3C, introducing numerous
               new features and APIs such as semantic elements, multimedia
